updated heart icon

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
               <label for="exampleInputEmail1">Please enter a keyword to enter syed's heart</label>
               <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Key Please">
             </div>
-            <button type="submit" class="btn btn-primary" onclick="openImage()">Enter <img src="C:\Users\kicro\Downloads\heart.png"></button>
+            <button type="submit" class="btn btn-primary" onclick="openImage()">Enter <img src="./heart.png"></button>
           </form>
   </div>
 
@@ -164,7 +164,7 @@
     <div class="bubble">Gori</div>
     <div class="bubble">Billi</div>
     <div class="bubble">Shanoor</div>
-  <div class="bubble"><img src="C:\Users\kicro\Downloads\heart.png"></div>
+  <div class="bubble"><img src="./heart.png"></div>
 
   <script>
         function openImage() {
@@ -176,7 +176,7 @@
         // window.open('https://drive.google.com/file/d/1woEPCtRl25UTB_9dRTR1vrxWBACo4BTh/preview', '_blank');
         window.open('https://drive.google.com/file/d/1Uv__B_4EoPpA1aCUTnBMWCO5MjhhQkAD/preview', '_blank')
       } else {
-        alert('Sorry, beautiful!');
+        alert('Try Again Meri Cham Cham!');
       }
     }
   </script>
